Fixed Product grids on Mobile

--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ footer {
         margin-top: 50px;
     }
 }
-@media only screen and (max-width: 992px){
+@media only screen and (max-width: 992px) and (min-width: 769px){
     .popularProducts {
         grid-template-columns: repeat(2, 1fr);
     }
